--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5006,6 +5006,8 @@ a.badge:focus {
 .jumbotron {
   padding-top: 30px;
   padding-bottom: 30px;
+  padding-left: 30px;
+  padding-right: 30px;
   margin-bottom: 30px;
   color: inherit;
   background-color: #eee;
